fixed bulleted list spacing

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -151,6 +151,10 @@ a.header-anchor
 .workshop .sidebar .sidebar-sub-headers
   margin-top: 0.3rem
 
+.teachthe1k .content__default ul,
+.workshop .content__default ul
+  padding-left: 2.4rem
+
 .teachthe1k p,
 .teachthe1k a,
 .teachthe1k ul,
